# docs/swagger.yaml
@@ -1,22 +1,35 @@
 definitions:
-  svc.Response:
-    properties:
-      code:
-        type: integer
-      data: {}
-      msg:
-        type: string
+  types.AddUserReq:
+    type: object
+  types.AddUserRsp:
+    type: object
+  types.DeleteUserReq:
+    type: object
+  types.DeleteUserRsp:
+    type: object
+  types.EditUserReq:
+    type: object
+  types.EditUserRsp:
+    type: object
+  types.GetUserByIdReq:
+    type: object
+  types.GetUserByIdRsp:
+    type: object
+  types.GetUserListReq:
+    type: object
+  types.GetUserListRsp:
     type: object
   types.UserSignInReq:
-    properties:
-      password:
-        description: 密码
-        type: string
-      user_name:
-        description: 用户名
-        type: string
     type: object
   types.UserSignInRsp:
+    type: object
+  types.UserSignOutReq:
+    type: object
+  types.UserSignOutRsp:
+    type: object
+  types.UserSignUpReq:
+    type: object
+  types.UserSignUpRsp:
     type: object
 host: localhost:8888
 info:
@@ -29,9 +42,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: 用户登录接口
       parameters:
-      - description: 登录信息
+      - description: request params description
         in: body
         name: UserSignIn
         required: true
@@ -44,50 +56,175 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/types.UserSignInRsp'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/svc.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/svc.Response'
       summary: 用户登录
+      tags:
+      - ""
+  /api/v1/sign_out:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request params description
+        in: body
+        name: UserSignOut
+        required: true
+        schema:
+          $ref: '#/definitions/types.UserSignOutReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.UserSignOutRsp'
+      summary: 用户退出登录
+      tags:
+      - ""
+  /api/v1/sign_up:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request params description
+        in: body
+        name: UserSignUp
+        required: true
+        schema:
+          $ref: '#/definitions/types.UserSignUpReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.UserSignUpRsp'
+      summary: 用户注册
+      tags:
+      - ""
+  /api/v1/user/:id:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: request params description
+        in: body
+        name: GetUserById
+        required: true
+        schema:
+          $ref: '#/definitions/types.GetUserByIdReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.GetUserByIdRsp'
+      summary: 根据ID查询用户
+      tags:
+      - ""
+  /api/v1/user/add:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: request params description
+        in: body
+        name: AddUser
+        required: true
+        schema:
+          $ref: '#/definitions/types.AddUserReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.AddUserRsp'
+      summary: 添加用户
+      tags:
+      - ""
+  /api/v1/user/delete:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: request params description
+        in: body
+        name: DeleteUser
+        required: true
+        schema:
+          $ref: '#/definitions/types.DeleteUserReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.DeleteUserRsp'
+      summary: 删除用户
+      tags:
+      - ""
+  /api/v1/user/edit:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: request params description
+        in: body
+        name: EditUser
+        required: true
+        schema:
+          $ref: '#/definitions/types.EditUserReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.EditUserRsp'
+      summary: 修改用户
+      tags:
+      - ""
+  /api/v1/user/list:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: request params description
+        in: body
+        name: GetUserList
+        required: true
+        schema:
+          $ref: '#/definitions/types.GetUserListReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/types.GetUserListRsp'
+      summary: 用户列表
       tags:
       - ""
   /api/v1/ws/market:
     get:
       consumes:
-      - application/json
-      description: WebSocket协议接口，可能返回文本或二进制数据
+      - text/plain
       parameters:
-      - description: Bearer token
-        in: header
-        name: authorization
+      - description: request params description
+        in: body
+        name: WsMarketList
         required: true
-        type: string
-      - description: 市场名称过滤
-        enum:
-        - BTC
-        - ETH
-        - USDT
-        in: query
-        name: market
-        type: string
+        schema:
+          type: string
       produces:
       - text/plain
       responses:
         "200":
-          description: 成功返回文本或二进制数据
+          description: OK
           schema:
             type: string
-        "400":
-          description: 错误信息
-          schema:
-            type: string
-      security:
-      - ApiKeyAuth: []
-      summary: 获取市场列表(WebSocket)
+      summary: 市场行情（websocket方式）
       tags:
-      - WebSocket市场数据
+      - ""
 swagger: "2.0"
