# internal/handler/api/v1/user/edit_user_handler.go
@@ -1,7 +1,6 @@
 package user
 
 import (
-	"context"
 	"github.com/civet148/log"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -10,7 +9,14 @@ import (
 	"test/internal/types"
 )
 
-// 修改用户
+// @Summary 修改用户
+// @Description
+// @Tags
+// @Accept json
+// @Produce json
+// @Param EditUser body types.EditUserReq true "request params description"
+// @Success 200 {object} types.EditUserRsp
+// @Router /api/v1/user/edit [post]
 func EditUserHandler(svcCtx *svc.ServiceContext) gin.HandlerFunc {
 	return func(c *gin.Context) {
 
@@ -20,8 +26,8 @@ func EditUserHandler(svcCtx *svc.ServiceContext) gin.HandlerFunc {
 			return
 		}
 		log.Debugf("request [%+v]", req)
-		l := user.NewEditUserLogic(context.Background(), svcCtx)
-		resp, err := l.EditUser(&req)
+		l := user.NewEditUserLogic(c, svcCtx)
+		resp, err := l.EditUser(c, &req)
 		c.JSON(http.StatusOK, svc.JsonResponse(resp, err))
 
 	}
