# internal/logic/api/v1/user/add_user_logic.go
@@ -20,8 +20,9 @@ func NewAddUserLogic(ctx context.Context, svcCtx *svc.ServiceContext) *AddUserLo
 	}
 }
 
-func (l *AddUserLogic) AddUser(req *types.AddUserReq) (resp *types.AddUserRsp, err error) {
+func (l *AddUserLogic) AddUser(ctx context.Context, req *types.AddUserReq) (resp *types.AddUserRsp, err error) {
+	// you can call ctx.(*gin.Context) convert to gin context
 	// todo: add your logic here and delete this line
 
-	return
+	return &types.AddUserRsp{}, nil
 }
