# internal/logic/api/v1/user/delete_user_logic.go
@@ -20,8 +20,9 @@ func NewDeleteUserLogic(ctx context.Context, svcCtx *svc.ServiceContext) *Delete
 	}
 }
 
-func (l *DeleteUserLogic) DeleteUser(req *types.DeleteUserReq) (resp *types.DeleteUserRsp, err error) {
+func (l *DeleteUserLogic) DeleteUser(ctx context.Context, req *types.DeleteUserReq) (resp *types.DeleteUserRsp, err error) {
+	// you can call ctx.(*gin.Context) convert to gin context
 	// todo: add your logic here and delete this line
 
-	return
+	return &types.DeleteUserRsp{}, nil
 }
