# internal/logic/api/v1/user/get_user_list_logic.go
@@ -20,8 +20,9 @@ func NewGetUserListLogic(ctx context.Context, svcCtx *svc.ServiceContext) *GetUs
 	}
 }
 
-func (l *GetUserListLogic) GetUserList(req *types.GetUserListReq) (resp *types.GetUserListRsp, err error) {
+func (l *GetUserListLogic) GetUserList(ctx context.Context, req *types.GetUserListReq) (resp *types.GetUserListRsp, err error) {
+	// you can call ctx.(*gin.Context) convert to gin context
 	// todo: add your logic here and delete this line
 
-	return
+	return &types.GetUserListRsp{}, nil
 }
