# internal/logic/api/v1/user_sign_up_logic.go
@@ -20,8 +20,9 @@ func NewUserSignUpLogic(ctx context.Context, svcCtx *svc.ServiceContext) *UserSi
 	}
 }
 
-func (l *UserSignUpLogic) UserSignUp(req *types.UserSignUpReq) (resp *types.UserSignUpRsp, err error) {
+func (l *UserSignUpLogic) UserSignUp(ctx context.Context, req *types.UserSignUpReq) (resp *types.UserSignUpRsp, err error) {
+	// you can call ctx.(*gin.Context) convert to gin context
 	// todo: add your logic here and delete this line
 
-	return
+	return &types.UserSignUpRsp{}, nil
 }
